--- a/npcs.html
+++ b/npcs.html
@@ -15,11 +15,29 @@
 
 <div id="wikimain">
 	<CENTER>
-		<H2>Wiki for the Strangled-Goblin Campaign</H2>
+		<H2>Port Perseverance NPCs</H2>
 
 		<BR><BR>
-		Staring: Beth Rogan, Chuck Squashblossom and Harren Treefriend (featuring Inspector Wolf)
-		<img src="images/stick_party.png" width="500"></img>
+			Trout<br>
+			Dino<br>
+			Yarto<br>
+			The Unimpeachable<br>
+			Charly<br>
+			Josef<br>
+			Harrold<br>
+			Ronold<br>
+			Claren<br>
+			Dry Bread Thief<br>
+			Vako<br>
+			Krys<br>
+			Kenzy<br>
+			Kinturuso the Wise<Br>
+			Jopha<br>
+			Cloaked Figure / Bezel<br>
+			Larry<br>
+			Daryl<br>
+			Jon<br>
+
 	</CENTER>
 
 </div>
@@ -32,13 +50,13 @@
 	<h3 style="float: left"> Browse Other Pages</h3><img src="/images/SG_icon.png" width="60" style="float: right"></img>
 
 	<ul style="clear: both">
-		<li> <b>Wiki Home</b></li>
+		<li> <a href="/index.html">Wiki Home</a></li>
 		<BR>
 		<li> <a href="/locations.html">Locations</a></li>
 		<BR>
 		<li> <a href="/events.html">Events</a></li>
 		<BR>
-		<li> <a href="/npcs.html">NPCs</a></li>
+			<li> <b>NPCs</b></li>
 		<BR>
 		<li> <a href="/sessions.html">Sessions</a></li>
 		<BR>
