--- a/npcs.html
+++ b/npcs.html
@@ -14,31 +14,30 @@
 
 
 <div id="wikimain">
-	<CENTER>
 		<H2>Port Perseverance NPCs</H2>
 
 		<BR><BR>
-			Trout<br>
-			Dino<br>
-			Yarto<br>
-			The Unimpeachable<br>
-			Charly<br>
-			Josef<br>
-			Harrold<br>
-			Ronold<br>
-			Claren<br>
-			Dry Bread Thief<br>
-			Vako<br>
-			Krys<br>
-			Kenzy<br>
-			Kinturuso the Wise<Br>
-			Jopha<br>
-			Cloaked Figure / Bezel<br>
-			Larry<br>
-			Daryl<br>
-			Jon<br>
-
-	</CENTER>
+			<table>
+				<Tr><td>NPC</td><td>Quick Notes</td></tr>
+				<tr><td>Trout</td><td></td></tr>
+				<tr><Td>Dino</td><td></td></tr>
+				<tr><td>Yarto</td><td></td></tr>
+				<tr><td>The Unimpeachable</td><td>mentioned by Trout</td></tr>
+				<tr><td>Charly</td><td></td></tr>
+				<tr><Td>Josef</td><td></td></tr>
+				<tr><td>Harrold</td><td></td></tr>
+				<tr><Td>Ronold</td><td></td></tr>
+				<tr><td>Claren</td><td></td></tr>
+				<tr><Td>Dry Bread Thief</td><td></td></tr>
+				<tr><td>Vako</td><td></td></tr>
+				<tr><Td>Krys</td><td></td></tr>
+				<tr><Td>Kenzy</td><td></td></tr>
+				<tr><td>Kinturuso the Wise</td><td></td></tr>
+				<tr><td>Jopha</td><td></td></tr>
+				<tr><td>Cloaked Figure / Bezel</td><td></td></tr>
+				<tr><td>Larry</td><td></td></tr>
+				<tr><td>Daryl</td><td></td></tr>
+				<tr><td>Jon</td><td></td></tr>
 
 </div>
 
