--- a/npcs.html
+++ b/npcs.html
@@ -38,7 +38,8 @@
 				<tr><td>Larry</td><td></td></tr>
 				<tr><td>Daryl</td><td></td></tr>
 				<tr><td>Jon</td><td></td></tr>
-
+			</table>
+<br><br>
 </div>
 
 
