--- a/npcs.html
+++ b/npcs.html
@@ -18,26 +18,30 @@
 
 		<BR><BR>
 			<table>
-				<Tr><td>NPC</td><td>Quick Notes</td></tr>
-				<tr><td>Trout</td><td></td></tr>
-				<tr><Td>Dino</td><td></td></tr>
-				<tr><td>Yarto</td><td></td></tr>
+				<Tr><td><br>NPC</b></td><td><b>Quick Notes</b></td></tr>
+				<tr><td>Trout</td><td>Waif who woke party to start Day 1</td></tr>
+				<tr><Td>Dino</td><td>Carefree, teenage lieutenant of Clan Cullis</td></tr>
+				<tr><td>Yarto</td><td>Older brother to Dino, great warrior, captain of Clan Cullis</td></tr>
 				<tr><td>The Unimpeachable</td><td>mentioned by Trout</td></tr>
-				<tr><td>Charly</td><td></td></tr>
-				<tr><Td>Josef</td><td></td></tr>
-				<tr><td>Harrold</td><td></td></tr>
-				<tr><Td>Ronold</td><td></td></tr>
-				<tr><td>Claren</td><td></td></tr>
-				<tr><Td>Dry Bread Thief</td><td></td></tr>
-				<tr><td>Vako</td><td></td></tr>
-				<tr><Td>Krys</td><td></td></tr>
-				<tr><Td>Kenzy</td><td></td></tr>
-				<tr><td>Kinturuso the Wise</td><td></td></tr>
-				<tr><td>Jopha</td><td></td></tr>
-				<tr><td>Cloaked Figure / Bezel</td><td></td></tr>
-				<tr><td>Larry</td><td></td></tr>
-				<tr><td>Daryl</td><td></td></tr>
-				<tr><td>Jon</td><td></td></tr>
+				<tr><td>Charly</td><td>Crazy, itinerant preacher</td></tr>
+				<tr><td>Lucius</td><td>Mentioned by Charly, a martyr</td></tr>
+				<tr><Td>Josef</td><td>A barkeep at the Lusty Penny</td></tr>
+				<tr><td>Harrold</td><td>A barfly / storyteller</td></tr>
+				<tr><td>Salty Siren bouncer</td><td>Hired guard</td></tr>	
+				<tr><td>Salty Siren bartender</td><td>Friend of Ronold</td></tr>	
+				<tr><Td>Ronold</td><td>Dino's father, works at Crimson Forgery</td></tr>
+				<tr><td>Claren</td><td>Mentioned by Salty Siren bartender</td></tr>
+				<tr><Td>Dry Bread Thief</td><td>Barking for community service</td></tr>
+				<tr><td>Vako</td><td>Deceased; First Hegemon, Cullish Champion & victor, etc.</td></tr>
+				<tr><Td>Krys</td><td>A Cullish sergeant posted to Crimson Forgery</td></tr>
+				<tr><Td>Kenzy</td><td>Yarto's friendly mastiff</td></tr>
+				<tr><td>Kinturuso the Wise</td><td>Mentioned by an old lady</td></tr>
+				<tr><td>Jopha</td><td>Mentioned by an old lady</td></tr>
+				<tr><td>Cloaked Figure / Bezel</td><td>Jamfalcon be trippin'</td></tr>
+				<tr><td>Oliver</td><td>Cousin to Dino - dissident?</td></tr>
+				<tr><td>Larry</td><td>Proprieter of Larry's Weapon Shoppe near Docks Common</td></tr>
+				<tr><td>Daryl</td><td>Proprieter of Daryl's Armour et Cetera near Docks Common</td></tr>
+				<tr><td>Jon</td><td>A friend of Dino's who tried to kill him</td></tr>
 			</table>
 <br><br>
 </div>
