--- a/npcs.html
+++ b/npcs.html
@@ -22,7 +22,7 @@
 				<tr><td>Trout</td><td>Waif who woke party to start Day 1</td></tr>
 				<tr><Td>Dino</td><td>Carefree, teenage lieutenant of Clan Cullis</td></tr>
 				<tr><td>Yarto</td><td>Older brother to Dino, great warrior, captain of Clan Cullis</td></tr>
-				<tr><td>The Unimpeachable</td><td>mentioned by Trout</td></tr>
+				<tr><td>The Unimpeachable</td><td>Mentioned by Trout</td></tr>
 				<tr><td>Charly</td><td>Crazy, itinerant preacher</td></tr>
 				<tr><td>Lucius</td><td>Mentioned by Charly, a martyr</td></tr>
 				<tr><Td>Josef</td><td>A barkeep at the Lusty Penny</td></tr>
