--- a/npcs.html
+++ b/npcs.html
@@ -41,7 +41,7 @@
 				<tr><td>Oliver</td><td>Cousin to Dino - dissident?</td></tr>
 				<tr><td>Larry</td><td>Proprieter of Larry's Weapon Shoppe near Docks Common</td></tr>
 				<tr><td>Daryl</td><td>Proprieter of Daryl's Armour et Cetera near Docks Common</td></tr>
-				<tr><td>Jon</td><td>A friend of Dino's who tried to kill him</td></tr>
+				<tr><td>Jon Foy</td><td>A Hafoyn friend of Dino's who tried to kill him</td></tr>
 			</table>
 <br><br>
 </div>
