--- a/npcs.html
+++ b/npcs.html
@@ -18,7 +18,7 @@
 
 		<BR><BR>
 			<table>
-				<Tr><td><b>NPC</b></td><td><b>Quick Notes</b></td></tr>
+				<Tr><td width="200"><b>NPC</b></td><td><b>Quick Notes</b></td></tr>
 				<tr><td>Trout</td><td>Waif who woke party to start Day 1</td></tr>
 				<tr><Td>Dino</td><td>Carefree, teenage lieutenant of Clan Cullis</td></tr>
 				<tr><td>Yarto</td><td>Older brother to Dino, great warrior, captain of Clan Cullis</td></tr>
