--- a/npcs.html
+++ b/npcs.html
@@ -39,8 +39,8 @@
 				<tr><td>Jopha</td><td>Mentioned by an old lady</td></tr>
 				<tr><td>Cloaked Figure / Bezel</td><td>Jamfalcon be trippin'</td></tr>
 				<tr><td>Oliver</td><td>Cousin to Dino - dissident?</td></tr>
-				<tr><td>Larry</td><td>Proprieter of Larry's Weapon Shoppe near Docks Common</td></tr>
-				<tr><td>Daryl</td><td>Proprieter of Daryl's Armour et Cetera near Docks Common</td></tr>
+				<tr><td>Larry</td><td>Proprietor of Larry's Weapon Shoppe near Docks Common</td></tr>
+				<tr><td>Daryl</td><td>Proprietor of Daryl's Armour et Cetera near Docks Common</td></tr>
 				<tr><td>Jon Foy</td><td>A Hafoyn friend of Dino's who tried to kill him</td></tr>
 			</table>
 <br><br>
