--- a/npcs.html
+++ b/npcs.html
@@ -42,6 +42,11 @@
 				<tr><td>Larry</td><td>Proprietor of Larry's Weapon Shoppe near Docks Common</td></tr>
 				<tr><td>Daryl</td><td>Proprietor of Daryl's Armour et Cetera near Docks Common</td></tr>
 				<tr><td>Jon Foy</td><td>A Hafoyn friend of Dino's who tried to kill him</td></tr>
+				<tr><td>Docks Sergeant</td><td>A City Guard investigator based in the Sea Hexad</td></tr>
+				<tr><td>Bookie's Shopkeeper</td><td>A wizened shopkeeper</td></tr>
+				<tr><td>Bookie</td><td>The local oddsmaker, etc.</td></tr>
+				<tr><td>Bookie's Guard</td><td>An enforcer</td></tr>
+				<tr><td>"Aunt" Patty</td><td>Around the clock concierge / operator of the Derelict Pugilist</td></tr>
 			</table>
 <br><br>
 </div>
