--- a/npcs.html
+++ b/npcs.html
@@ -46,11 +46,13 @@
 				<tr><td>Bookie's Shopkeeper</td><td>A wizened shopkeeper</td></tr>
 				<tr><td>Bookie</td><td>The local oddsmaker, etc.</td></tr>
 				<tr><td>Bookie's Guard</td><td>An enforcer</td></tr>
+				<tr><td>Dino's mother</td><td>She exists</td></tr>
 				<tr><td>"Aunt" Patty</td><td>Around the clock concierge / operator of the Derelict Pugilist</td></tr>
 				<tr><td>Fred</td><td>A server at the Golden Gate</td></tr>
 				<tr><td>Dug Haberdash</td><td>Proprietor of The Dug Skull "locksmithing" and "security" shop</td></tr>
+				<tr><td>S B</td><td>A shadowy figure</td></tr>
 				<tr><td>Kasis</td><td>A server at the Cerulean Sky</td></tr>
-				
+				<tr><td>Rachel Hafoy</td><td>Champion Apparent of the Hafoyn</td></tr>
 			</table>
 <br><br>
 </div>
