--- a/npcs.html
+++ b/npcs.html
@@ -53,6 +53,8 @@
 				<tr><td>S B</td><td>A shadowy figure</td></tr>
 				<tr><td>Kasis</td><td>A server at the Cerulean Sky</td></tr>
 				<tr><td>Rachel Hafoy</td><td>Champion Apparent of the Hafoyn</td></tr>
+				<tr><td>Erik</td><td>A paranoid druid with a list</td></tr>
+				<tr><td>Rudolph</td><td>A 200 lb white wolf and Erik's companion</td></tr>
 			</table>
 <br><br>
 </div>
