--- a/npcs.html
+++ b/npcs.html
@@ -35,7 +35,7 @@
 				<tr><td>Vako</td><td>Deceased; First Hegemon, Cullish Champion & victor, etc.</td></tr>
 				<tr><Td>Krys</td><td>A Cullish sergeant posted to Crimson Forgery</td></tr>
 				<tr><Td>Kenzy</td><td>Yarto's friendly mastiff</td></tr>
-				<tr><td>Kinturuso Eso the Wise</td><td>Mentioned by an old lady</td></tr>
+				<tr><td>Kinturuso Eso the Wise</td><td>Last Esao Champion and back-to-back Games victor</td></tr>
 				<tr><td>Jopha</td><td>Mentioned by an old lady</td></tr>
 				<tr><td>Cloaked Figure / Bezel</td><td>Jamfalcon be trippin'</td></tr>
 				<tr><td>Oliver</td><td>Cousin to Dino - dissident?</td></tr>
