--- a/npcs.html
+++ b/npcs.html
@@ -32,7 +32,7 @@
 				<tr><Td>Ronold</td><td>Dino's father, works at Crimson Forgery</td></tr>
 				<tr><td>Claren</td><td>Mentioned by Salty Siren bartender</td></tr>
 				<tr><Td>Dry Bread Thief</td><td>Barking for community service</td></tr>
-				<tr><td>Vako</td><td>Deceased; First Hegemon, Cullish Champion & victor, etc.</td></tr>
+				<tr><td>Vako Cullis</td><td>Deceased; First Hegemon, Cullish Champion & victor, etc.</td></tr>
 				<tr><Td>Krys</td><td>A Cullish sergeant posted to Crimson Forgery</td></tr>
 				<tr><Td>Kenzy</td><td>Yarto's friendly mastiff</td></tr>
 				<tr><td>Kinturuso Eso the Wise</td><td>Last Esao Champion and back-to-back Games victor</td></tr>
