--- a/npcs.html
+++ b/npcs.html
@@ -21,10 +21,10 @@
 				<Tr><td width="200"><b>NPC</b></td><td><b>Quick Notes</b></td></tr>
 				<tr><td>Trout</td><td>Waif who woke party to start Day 1</td></tr>
 				<tr><Td>Dino</td><td>Carefree, teenage lieutenant of Clan Cullis</td></tr>
-				<tr><td>Yarto</td><td>Older brother to Dino, Champion Apparent of Clan Cullis</td></tr>
-				<tr><td>The Unimpeachable</td><td>Mentioned by Trout</td></tr>
+				<tr><td>Yarto</td><td>Older brother to Dino, Champion Apparent of Clan Cullis, possibly missing</td></tr>
+				<tr><td>Shanna Foy the Unimpeachable</td><td>Multiple Games victor who won for both Hafoyn and Cullish</td></tr>
 				<tr><td>Charly</td><td>Crazy, itinerant preacher</td></tr>
-				<tr><td>Lucius</td><td>Mentioned by Charly, a martyr</td></tr>
+				<tr><td>Lucius the Martyr</td><td>Former Cullish High Patriarch and Marshal of the Grey Templars</td></tr>
 				<tr><Td>Josef</td><td>A barkeep at the Lusty Penny</td></tr>
 				<tr><td>Harrold</td><td>A barfly / storyteller</td></tr>
 				<tr><td>Salty Siren bouncer</td><td>Hired guard</td></tr>	
@@ -32,11 +32,11 @@
 				<tr><Td>Ronold</td><td>Dino's father, works at Crimson Forgery</td></tr>
 				<tr><td>Claren</td><td>Mentioned by Salty Siren bartender</td></tr>
 				<tr><Td>Dry Bread Thief</td><td>Barking for community service</td></tr>
-				<tr><td>Vako Cullis</td><td>Deceased; First Hegemon, Cullish Champion & victor, etc.</td></tr>
+				<tr><td>I Vako Cullis</td><td>Deceased; First Hegemon, Cullish Champion & victor, etc.</td></tr>
 				<tr><Td>Krys</td><td>A Cullish sergeant posted to Crimson Forgery</td></tr>
 				<tr><Td>Kenzy</td><td>Yarto's friendly mastiff</td></tr>
-				<tr><td>Kinturuso Eso the Wise</td><td>Last Esao Champion and back-to-back Games victor</td></tr>
-				<tr><td>Jopha</td><td>Mentioned by an old lady</td></tr>
+				<tr><td>V Kinturuso Eso the Wise</td><td>Last Esao Champion and back-to-back Games victor, Founder of The Order of Science</td></tr>
+				<tr><td>Jopha</td><td>Mentioned by an old lady in disgust</td></tr>
 				<tr><td>Cloaked Figure / Bezel</td><td>Jamfalcon be trippin'</td></tr>
 				<tr><td>Oliver</td><td>Cousin to Dino - dissident?</td></tr>
 				<tr><td>Larry</td><td>Proprietor of Larry's Weapon Shoppe near Docks Common</td></tr>
@@ -55,6 +55,10 @@
 				<tr><td>Rachel Hafoy</td><td>Champion Apparent of the Hafoyn</td></tr>
 				<tr><td>Erik</td><td>A paranoid druid with a list</td></tr>
 				<tr><td>Rudolph</td><td>A 200 lb white wolf and Erik's companion</td></tr>
+				<tr><td>VI Bellatrix (Goldcoffer) Hafoy</td><td>Appointed Mortymer Ross to Dean of the Order of Science, and empowered them</td></tr>
+				<tr><td>VII Morris Hafoy</td><td>Husband to Bellatrix, still lives, but insane</td></tr>
+				<tr><td>IX Rejina Hafoy</td><td>Current Hegemon, daughter of Bellttrix and Morris</td></tr>
+				<tr><td>III Brissle Cullis</td><td>Hegemon who decreed the Abolition of Prayer</td></tr>
 			</table>
 <br><br>
 </div>
