--- a/npcs.html
+++ b/npcs.html
@@ -57,7 +57,7 @@
 				<tr><td>Rudolph</td><td>A 200 lb white wolf and Erik's companion</td></tr>
 				<tr><td>VI Bellatrix (Goldcoffer) Hafoy</td><td>Appointed Mortymer Ross to Dean of the Order of Science, and empowered them</td></tr>
 				<tr><td>VII Morris Hafoy</td><td>Husband to Bellatrix, still lives, but insane</td></tr>
-				<tr><td>IX Rejina Hafoy</td><td>Current Hegemon, daughter of Bellttrix and Morris</td></tr>
+				<tr><td>IX Rejina Hafoy</td><td>Current Hegemon, daughter of Bellatrix and Morris</td></tr>
 				<tr><td>III Brissle Cullis</td><td>Hegemon who decreed the Abolition of Prayer</td></tr>
 			</table>
 <br><br>
